[tool.poetry]
name = "directions-vans-1"
version = "0.1.0"
description = ""
authors = ["CoelhoRegis <reginaldo.filho@sga.pucminas.br>"]

[tool.poetry.dependencies]
python = "^3.7"
googlemaps = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
